@@ -1,3 +1,7 @@
+2008-12-28  Donal K. Fellows  <dkf@users.sf.net>
+
+	* generic/tclZlib.c (Tcl_ZlibStreamPut): Plug a memory leak.
+
 2008-12-27  Donal K. Fellows  <dkf@users.sf.net>
 
 	* generic/tclZlib.c (ZlibStreamCmd): Fix compilation consistency. [Bug
